--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "eslint --fix",
+      "echo \"Running Prettier on:\" && echo",
       "prettier --write"
     ],
     "*.{css,scss,json,md,yml,yaml}": [
@@ -36,6 +37,7 @@
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
