--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,11 @@
 {
   "semi": true,
+  "trailingComma": "es5",
   "singleQuote": true,
+  "printWidth": 80,
   "tabWidth": 2,
   "useTabs": false,
-  "trailingComma": "es5",
-  "printWidth": 80,
-  "arrowParens": "avoid"
+  "bracketSpacing": true,
+  "arrowParens": "avoid",
+  "endOfLine": "lf"
 }
