--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,23 @@
-# .prettierignore
+# 构建产物
 dist
-node_modules
 build
-*.min.js
+out
+.next
+.nuxt
+
+# 依赖
+node_modules
+
+# 静态资源（可选）
+public/*.min.css
+public/*.min.js
+
+# 日志/临时文件
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.vscode
+.idea
