--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
+    "antd": "^6.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
@@ -44,6 +46,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
+    "less": "^4.4.2",
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.3",
     "rollup-plugin-visualizer": "^6.0.5",
